Add javadoc, remove Tidbit type parameter