@@ -1,15 +1,15 @@
 package feedme.domain.tidbit;
 
 import feedme.domain.tidbit.action.TidbitAction;
-import feedme.domain.tidbit.action.impl.ConsumeAction;
-import feedme.domain.tidbit.action.impl.ExpireAction;
 import feedme.domain.tidbit.action.impl.OnItAction;
 import feedme.domain.tidbit.seed.Seed;
 
 import java.time.Instant;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
-public class TaskTidbit extends Tidbit<Tidbit.Type> {
+public class TaskTidbit extends Tidbit {
 
     public TaskTidbit(
         Instant createdAt,
@@ -22,11 +22,9 @@ public class TaskTidbit extends Tidbit<Tidbit.Type> {
     }
 
     public Set<Class<? extends TidbitAction>> availableActions() {
-        return Set.of(
-            ConsumeAction.class,
-            OnItAction.class,
-            ExpireAction.class
-        );
+        Set<Class<? extends TidbitAction>> actions = new HashSet<>(super.availableActions());
+        actions.add(OnItAction.class);
+        return Collections.unmodifiableSet(actions);
     }
 
     public static class State extends TidbitState {
